# sports_3d

./: .env  .gitignore  .gitmodules  CLAUDE.md  Sam3dBody_explanation.md  TRAJECTORY_USAGE.md  annotate_bbox.py  ball_trajectory.py  main.py  pyproject.toml  startup.sh  test_trajectory.py
.claude/: settings.json  settings.local.json
sports_3d/assets_3d/: tennis_court.py
sports_3d/baseball/: one_frame.py
sports_3d/blender/: __init__.py  ball.py  camera.py  config.py  court.py  data_loader.py  environment.py  main.py  materials.py  render.py
sports_3d/homography/: kalman_inference.py  tennis.py  tennis_trajectory.py  test.ipynb
sports_3d/human_estimation/: estimate_human_form.py  test.ipynb  utils.py
sports_3d/scripts/: create_trajectory_video.sh  kalman_inference.sh  tennis_trajectory.sh  visualize_trajectory.sh
sports_3d/trajectory/: __init__.py  bbox_projection.py  camera_calibration.py  data_loader.py  visualization.py
sports_3d/utils/: annotate_ball_events.py  annotate_bbox.py  annotate_bbox_tennis.py  annotation_base.py  bbox_annotator_base.py  extract_frames.py  file_utils.py  kalman.py  label_keypoints.py  labeling_utils.py  refine_bbox_directory.py  tennis_video_util.py
sports_3d/visualization/: plot_trajectory_3d.py  utils.py
tests/: test_kalman.py
