[project]
name = "sports-3d"
version = "0.1.0"
description = "3D sports computer vision for tennis court analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appdirs>=1.4.4",
    "appnope>=0.1.4",
    "black>=25.12.0",
    "chump>=1.6.0",
    "cython>=3.2.2",
    "dill>=0.4.0",
    "einops>=0.8.1",
    "ffmpeg>=1.4",
    "fvcore>=0.1.5.post20221221",
    "huggingface-hub>=1.2.1",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "joblib>=1.5.2",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mhr>=1.0.0.post1",
    "networkx==3.2.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "optree>=0.18.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "pycocotools>=2.0.10",
    "pyglet>=2.1.11",
    "pyrender>=0.1.45",
    "pyrootutils>=1.0.4",
    "pytest>=9.0.2",
    "pytorch-lightning>=2.6.0",
    "rich>=14.2.0",
    "roma>=1.5.4",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.22",
    "torch>=2.8,<2.9",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
    "webdataset>=1.0.2",
    "xtcocotools>=1.14.3",
    "yacs>=0.1.8",
    "yt-dlp>=2025.11.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sports_3d"]

[tool.uv.extra-build-dependencies]
xtcocotools = ["numpy"]
detectron2 = ["torch"]


[tool.uv]
no-build-isolation-package = ['detectron2']
